# PracticasSO

Practica1_JulietaFlores/: main.c
Practica2_JulietaFlores/: CMakeLists.txt  kernel_drivers.c  kernel_service.c  user_app.c
Practica3_JulietaFlores/: CMakeLists.txt  main.c  pendsv.s  user_app.c
Practica4_JulietaFlores/: CMakeLists.txt  main.c  scheduler.c  scheduler.h  user_app.c
Practica5_2_JulietaFlores/: CMakeLists.txt  main.c  scheduler.c  scheduler.h  user_app.c
Practica5_JulietaFlores/: kernel_service.c  main.c  scheduler.c  scheduler.h  syscalls.h  syscalls.s  user_app.c
Practica6_JulietaFlores/: main.c  mmu.c  paging_basic.c  paging_on_demand.c  tlb.c  vm_bl.c
Practica7_JulietaFlores/: .gitignore  CMakeLists.txt  main.c
